--- a/gb/24/11/17/n14372740.md
+++ b/gb/24/11/17/n14372740.md
@@ -20,40 +20,39 @@
 <p><strong>了解更多澳洲即时要闻及生活资讯，请点击?<ahref="http://dajiyuan.com.au/" data-cke-saved-href="http://dajiyuan.com.au/">dajiyuan.com.au</a></strong><br />
 <strong>（本文未经许可不得转载或建立镜像网站）</strong></p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/17/n14372620.md#1">前日本驻澳大使指澳总理对中共软弱</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/17/n14372646.md#1">澳美日提升军事合作 日军将加入驻澳美军轮换</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/17/n14372641.md#1">气象局：今夏天气偏向高温多雨</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/15/n14371944.md#1">卢比奥出任美国务卿 专家解析中共的压力</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/16/n14372327.md#1">非法携枪入境被捕 女子对自己行为追悔莫及</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/16/n14372313.md#1">国民银行更新利率预期 明年5月前不会降息</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/15/n14372239.md#1">昆州公路事故频发 恐创年度死亡人数新高</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/15/n14371765.md#1">工会支持“可携带”长期服务假 惠及数百万人</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/15/n14371759.md#1">Woolworths仓库工人威胁罢工 圣诞节供应或受影响</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545193.md#1">悉尼内城联排别墅内现两具男尸已死数周</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545180.md#1">墨尔本托儿所虐待指控引发更广泛风险警告</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545084.md#1">前澳洲总理麦克马洪之子朱利安因病去世</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545036.md#1">悉尼两年轻女警遭袭 一人在暴力袭击中昏迷</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544591.md#1">数百万澳人靠遗产实现财务目标 专家警示风险</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544564.md#1">澳总理：政府应在经济发展中退居次位</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544586.md#1">专家称7月份房贷利率下调“已成定局”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544568.md#1">澳军将获20亿国防投资 提升远程打击能力</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544503.md#1">川普宣布关税后 澳洲退休基金上财年增长10%</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544548.md#1">疑似受雇杀人却找错目标 两未成年人被控谋杀</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/11/15/n9844503.md#1" target="_blank">毛泽东诗词的“血旗情结”</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/9/3/7/n2454149.md#1" target="_blank">【热点互动】自焚  中共自导的梦魇(2)</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/12/21/n9978292.md#1" target="_blank">文革中自杀的几个名人（8）“御用文人”吴晗</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/10/7/18/n2968768.md#1" target="_blank">一竹：不要再给自己的生命留下遗憾</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/11/n14368907.md#1">【未解之谜】巧合还是命中注定？改变历史的大风</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/2/n14363100.md#1">三国英雄─周瑜(1)：江东天子气 花落谁家？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/4/n14364035.md#1">商人突然怦然心动 枯骨果然是稀世珍宝</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/26/n14358403.md#1">【唐风影评】《驴得水》中国电影的红楼梦</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/15/n14372260.md#1">【未解之谜】为何他是天选之人？“Trump”的秘密</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/17/n14372655.md#1">【时事金扫描】万人战库尔斯克 战争或明年结束</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/17/n14372622.md#1">【菁英论坛】蓝光危害超新冠 唯有自救</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/15/n14372182.md#1">【马克时空】台湾退役鹰式导弹全数援助乌克兰</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/14/n14371516.md#1">中国多家银行转账设限 储户：一千元都转不出去</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/14/n14371250.md#1">【名家专栏】中国民众大量购买黄金留后路</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/15/n14371571.md#1">今年第2次 深海大带鱼冲上圣地亚哥县海滩</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/14/n14371503.md#1">舒淇近距离自拍冒白发 大方晒48岁真实模样</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/13/n14370673.md#1">赵薇遭封杀逾三年 IG晒手转陀螺照引猜测</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/14/n14370744.md#1">新片被13岁儿称赞最好看 邓超自嘲之前都白拍</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/15/n14372211.md#1">黄晓明回应女友舆论风波 鞠躬30秒被劝才起身</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/15/n14372238.md#1">好莱坞硬汉巨星史泰龙：川普是第二个华盛顿</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/14/n14370984.md#1">洗衣粉和洗衣精有何不同？ 哪个比较好？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/14/n14371382.md#1">Zwilling德国双立人清仓特卖 折扣高达75%</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/15/n14371829.md#1">不说不知道 专家教你吸尘器的正确使用方法</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/7/n14366556.md#1">维生素D困境：新指南颠覆阳光补充剂观念</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/10/n14367899.md#1">筛检胰脏癌5大方法 中西医结合控制病情</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541303.md#1">浮生行吟：说说两个“字”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540909.md#1">【未解之谜】“午夜之锤”早已被预知？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545497.md#1">【军事情报局】歼-10竟然仿自以色列狮式战机</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544980.md#1">【直播】川普签署“大而美法案”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544926.md#1">【纪元焦点】南航机长用生命反抗职场霸凌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543479.md#1">砸钱也没用 中共这些技术被“卡脖子”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543820.md#1">广东制造业陷寒冬 老牌厂知名外企宣告结业</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543930.md#1">人民日报刊文纪念李克强冥诞 求是网删文</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544376.md#1">章子怡《酱园弄》上映 9岁女儿客串不怯场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544400.md#1">好莱坞男星麦可·麦德森骤逝 享寿67岁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543281.md#1">刘晓庆珠宝公司因民间借贷纠纷被执行44.9万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544299.md#1">饰《鱿鱼游戏3》反角 任时完粉丝数暴涨百万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543287.md#1">综艺《出去一下》将开播 舒华、桂纶镁同台亮相</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544650.md#1">煎蛋不必翻面 专家分享不用油或黄油的妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/27/n14539807.md#1">简单穴位按摩与食疗 保您不再做“起夜家”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543550.md#1">美国独立日烟火秀 纽约五大区最佳观赏地</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543926.md#1">专家：经常做恶梦的人 早死概率增为3倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/27/n14539895.md#1">强化免疫有三关 中医从脏腑打造防御屏障</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/11/17/n14372740.htm">大量苍蝇侵扰悉尼 天然驱蝇法有哪些</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/11/17/n14372740.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
